added GET Recipe by id API and a openAPI specification for the API
